# ADAMultitool

./: Cargo.toml  Cross.toml  README.md
communication/: Cargo.toml
communication/src/: lib.rs  serial_config.rs  serial_port.rs
config_utility/: Cargo.toml
config_utility/src/: config_client.rs  device_config.rs  main.rs  protocol_client.rs  useless.rs
configs/device/: default.ini  pi0config.ini  pizero.ini  rk3399.ini  test.ini
configs/serial/: default.ini  pizero.ini  rk3399.ini  test1.ini  test34.ini  test44.ini  test55.ini  testrk3399.ini
main_menu/: Cargo.toml
main_menu/src/: main.rs  main_menu.rs
misc/: Cargo.toml
misc/src/: config.rs  device_config.rs  lib.rs  serial_config.rs  serial_port.rs
protocol/: Cargo.toml
protocol/examples/: simple.rs
protocol/src/: client.rs  error.rs  host.rs  lib.rs  mu_frame.rs
rk_menu/: Cargo.toml
rk_menu/src/: main.rs
rpi_menu/: Cargo.toml  README.md
rpi_menu/src/: main.rs  menu.rs
