[workspace]
resolver = "3"
members = [ "communication","config_utility", "main_menu", "misc", "protocol", "rpi_menu"]

[workspace.package]
authors = ["MU LLC <info@machunit.com>"]

[workspace.dependencies]
inquire = { version = "0.7.5", features = ["date"] }
configparser = "3.1.0"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.40", features = ["derive"] }