[workspace]
resolver = "3"
members = [ "config_utility", "misc", "protocol", "rk_menu"]

[workspace.package]
authors = ["MU LLC <info@machunit.com>"]

[workspace.dependencies]
inquire = "0.7.5"
configparser = "3.1.0"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.40", features = ["derive"] }
serialport =  {version = "4.7.2", default-features = false}