[package]
name = "config_utility"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
communication = { path = "../communication" }
configparser = {workspace = true}
protocol = { path = "../protocol" }
misc = { path = "../misc" }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
