[package]
name = "rk_menu"
version = "0.1.1"
edition = "2024"
authors.workspace = true

[dependencies]
sysfs_gpio = {version = "0.6.2"}
clap = { workspace = true }
misc = { path = "../misc" }
inquire = { workspace = true }
enigo = "0.5.0"
colored = "3.0.0"
terminal-menu = "3.0.0"
crossterm = "0.25.0"
